@@ -919,6 +919,13 @@ When editing other peoples code, this may produce a larger diff than expected "
   :type 'boolean
   :group 'python-mode)
 
+(defcustom py-newline-delete-trailing-whitespace-p t
+  "Delete trailing whitespace maybe left by `py-newline-and-indent'. 
+
+Default is `t'. See lp:1100892 "
+  :type 'boolean
+  :group 'python-mode)
+
 (defcustom py-warn-tmp-files-left-p nil
   "Messages a warning, when `py-temp-directory' contains files susceptible being left by previous Python-mode sessions. See also lp:987534 "
   :type 'boolean
